Fixed projects "overflow-y" not being necessary in the css

--- a/website/src/components/projects/ProjectStyles.css
+++ b/website/src/components/projects/ProjectStyles.css
@@ -24,7 +24,6 @@
   list-style: none;
   color: white;
   padding: 2vh 2vw 5vh;
-  overflow-y: scroll;
 }
 
 .project-items {
